--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <h2>Contact</h2>
       <p>Etiam dolor ex, vehicula nec augue in, lobortis volutpat turpis. Pellentesque vel vestibulum metus. Nam luctus porta sapien a malesuada. Nunc porttitor imperdiet placerat. Mauris aliquam, purus nec viverra placerat, ipsum est sollicitudin ipsum, vel lacinia justo justo rutrum libero.</p>
     </div>
+  </div>
   </main>
     <footer>
       <p>University of Michigan School of Information <br/>
